[package]
name = "feature-gate"
version = "0.1.0"
authors = ["Markus Mayer"]
description = "A simple macro for feature-gating modules and types"
keywords = ["template", "proc_macro", "procmacro"]
edition = "2021"

[features]
default = ["test"]
test = []

[lib]
proc-macro = true

[dependencies]
quote = "1"
proc-macro2 = "1.0"
syn = "2.0.18"

