[package]
name = "feature-gate"
version = "0.1.1"
authors = ["Markus Mayer"]
description = "A simple macro for feature-gating modules and types"
repository = "https://github.com/sunsided/feature-gate"
keywords = ["template", "proc_macro", "procmacro"]
license-file = "LICENSE.md"
edition = "2021"

[lib]
proc-macro = true

[dependencies]
quote = "1.0.28"
syn = "2.0.18"

